fix: ClassDashboard fallback to face records when students empty, fix NPE in KPI map